fixed spacing for ios because chrome dev tool pv is inaccurate

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -376,7 +376,7 @@ header > * {
    .section-content {
        width: 100%;
        margin: auto;
-       margin-top: 12px;
+       margin-top: 32px;
    }
 
    .section-content > h1 {
